--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-body{background-color: #f8faff; margin: 30px;filter: grayscale(1);}
+body{background-color: #eeeeee; margin: 30px;filter: grayscale(1);}
 p{font-family: 'Noto Sans','HarmonyOS Sans SC','Microsoft YaHei','sans-serif'; font-size: 16px;}
 h1{font-family: 'Noto Serif','Times New Roman','华文中宋','serif'; font-size: 36px;}
 h2{font-family: 'Noto Sans','HarmonyOS Sans SC','Microsoft YaHei','sans-serif'; font-size: 24px;}
