--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-body{background-color: #eaf1ff; margin: 30px;}
+body{background-color: #eaf1ff; margin: 30px 30px 30px 30px;}
 p{font-family: 'Noto Sans','HarmonyOS Sans SC','Microsoft YaHei','sans-serif'; font-size: 16px;}
 h1{font-family: 'Noto Serif','Times New Roman','华文中宋','serif'; font-size: 36px;}
 h2{font-family: 'Noto Sans','HarmonyOS Sans SC','Microsoft YaHei','sans-serif'; font-size: 24px;}
