--- a/404.css
+++ b/404.css
@@ -2,3 +2,4 @@ body{background-color: #fdf8f8;}
 div{background-color: #ffedea; border-color: #ffdad6}
 button{background-color: #ba1a1a;}
 button:hover{background-color: #93000a;}
+button:active{background-color: #de3730;}
