--- a/secret.css
+++ b/secret.css
@@ -8,3 +8,4 @@ button, button:active, button:hover{color: #003822}
 a{color: #4edf9e;}
 a:hover{color: #6ffcb8;}
 a:active{color: #26c284 ;}
+::selection{background-color:#4edf9e; color:#003822}
