--- a/styles/main.css
+++ b/styles/main.css
@@ -277,7 +277,7 @@
   src: url('Cantarell-VF.otf');
 }
 * {
-  font-family: 'Cantarell', 'Noto Sans SC', sans-serif;
+  font-family: 'Ubuntu', 'Cantarell', 'Noto Sans SC', sans-serif;
 }
 
 
